--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "dependencies": {
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "0.9.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
+    "webpack": "^3.8.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
